--- a/calculator.html
+++ b/calculator.html
@@ -5,12 +5,18 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function cuartaPotencia() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 4);
+}
+
 </script>
 </head>
 <body>
  Number:
  <input type="text" id="n1">
   <button onclick="cube()"> x^3 </button>
+  <button onclick="cuartaPotencia()"> x^4 </button>
 </body>
 <h1>Calculadora de Miguel Lahera Hervilla</h1>
 </html>
